--- a/config/mongoid.yml
+++ b/config/mongoid.yml
@@ -162,3 +162,14 @@ test:
         read:
           mode: :primary
         max_pool_size: 1
+
+production:
+  clients:
+    default:
+      database: bxt_school_development
+      hosts:
+        - localhost:27017
+      options:
+        read:
+          mode: :primary
+        max_pool_size: 10
