--- a/.gitignore
+++ b/.gitignore
@@ -16,7 +16,7 @@
 .byebug_history
 
 # Ignore master key for decrypting credentials and more.
-/config/master.key
+#/config/master.key
 
 /.idea/*
 /public/uploads/*
