--- a/config/mongoid.yml
+++ b/config/mongoid.yml
@@ -170,6 +170,11 @@ production:
       hosts:
         - localhost:27017
       options:
+        user: 'school'
+        password: 'hgc@bxt2020'
+        roles:
+          - 'dbOwner'
+        auth_mech: :scram
         read:
           mode: :primary
         max_pool_size: 10
