update to rials 6.0.0

--- a/config/mongoid.yml
+++ b/config/mongoid.yml
@@ -175,6 +175,7 @@ production:
         roles:
           - 'dbOwner'
         auth_mech: :scram
+        auth_source: admin
         read:
           mode: :primary
         max_pool_size: 10
